Added model refreshing upon file change